fixed z-indexes

--- a/content/themes/elements/css/app.css
+++ b/content/themes/elements/css/app.css
@@ -1404,7 +1404,7 @@ header {
   justify-content: flex-end;
   left: 0;
   position: fixed;
-  z-index: 1200;
+  z-index: 1100;
   width: 100%;
   height: 100px;
   padding-top: 15px;
@@ -1436,7 +1436,7 @@ header {
   header .link-logo {
     left: 30px; } }
 footer {
-  z-index: 1100;
+  z-index: 900;
   width: 100%;
   height: auto;
   overflow: hidden;
@@ -1593,7 +1593,7 @@ nav ul {
   top: 0;
   right: 0;
   position: fixed;
-  z-index: 1100;
+  z-index: 1000;
   width: 100%;
   height: 100%;
   background: white; }
